--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,18 @@
         <!-- Customize your theme here. -->
     </style>
 
+
+    <!-- the theme applied to the whole application -->
+    <style name="CustomTheme"
+           parent="android:style/Theme.Holo.Light.DarkActionBar">
+           <item name="android:actionBarStyle">@style/MintActionBar</item>
+    </style>
+
+
+    <!-- ActionBar styles -->
+    <style name="MintActionBar"
+        parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@drawable/actionbar_background</item>
+    </style>
+
 </resources>
